CMRARC-426 fixed reviews table, table was very messed up due to neat styles bleeding in.   had to remove <section> and create an overall <div> tag to wrap the page to get footers to work as well.

--- a/app/assets/stylesheets/pages/_records.scss
+++ b/app/assets/stylesheets/pages/_records.scss
@@ -1,9 +1,4 @@
 .record_review_data {
-  border-radius: 10px;
-  border: solid 2px;
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
   padding: 60px;
   font-size: 0.9em;
   background-color: white;
